<resources>
    <string name="app_name">SEG2505_Project</string>
    <string name="firstnameLBL">First Name</string>
    <string name="lastnameLBL">Last Name</string>
    <string name="emailLBL">Email</string>
    <string name="passwordLBL">Password</string>
    <string name="patientRadio">Patient</string>
    <string name="employeeRadio">Employee</string>
    <string name="createAccount">Register</string>
    <string name="welcomeText">Welcome, </string>
    <string name="roleText">Signed in as:</string>
    <string name="registerPatient">Register as a Patient</string>
    <string name="registerEmployee">Register as an Employee</string>
    <string name="cross">Medical Cross</string>
    <string name="loginBTN">Login</string>
    <string name="registrationBTN">Register Here</string>
    <string name="registerPatientBTN"><u>Patient</u></string>
    <string name="registerEmployeeBTN"><u>Employee</u></string>
    <string name="registerTextView">Don\'t have an account? Register as:</string>
    <string name="Admin">Administrator Access</string>
    <string name="viewServices">View Services</string>
    <string name="viewUsers">View Users</string>
    <string name="DisplayUsersTitle">Current Users</string>
    <string name="DisplayServicesTitle">Current Services</string>
    <string name="DisplayClinicsTitle">Current Clinics</string>
    <string name="back">Back</string>
    <string name="add">New Service</string>
    <string name="addServiceToClinic">Add Service</string>
    <string name="continueBTN">Continue</string>
    <string name="serviceInstruction"><u>Long</u> click on a service to edit or delete it</string>
    <string name="clinicInstruction">Click on a clinic to view its services</string>
    <string name="secondClinicInstruction"><u>Long</u> click on a clinic to delete it</string>
    <string name="userInstruction"><u>Long</u> click on a user to delete it</string>
    <string name="deleteClinicPopup">Would you like to delete this clinic?</string>
    <string name="deleteUserPopup">Would you like to delete this User?</string>
    <string name="userName">First Name Last Name</string>
    <string name="userRole">User Role</string>
    <string name="clinicNameHint">Clinic Name</string>
    <string name="margin">3dp</string>
    <string name="profileTitle">Complete Profile Information</string>
    <string name="countryHint">Country (ex: "Ottawa")</string>
    <string name="cityHint">City (ex: "Ottawa")</string>
    <string name="streetNumberHint">Street Number (ex: "800")</string>
    <string name="streetNameHint">Street Name (ex: "King Edward Ave")</string>
    <string name="phoneNumberHint">Phone Number (ex: "6135551234")</string>
    <string name="paymentMethodsTitle">Payment Methods Accepted</string>
    <string name="cashPM">Cash</string>
    <string name="creditCardPM">Credit Card</string>
    <string name="debitCardPM">Debit Card</string>
    <string name="insurancePM">Insurance Coverage</string>
    <string name="InsuranceTypesTitle">Insurance Types Accepted</string>
    <string name="hmoIT">HMO</string>
    <string name="ppoIT">PPO</string>
    <string name="epoIT">EPO</string>
    <string name="posIT">POS</string>
    <string name="saveChanges">Confirm</string>
    <string name="discardChanges">Discard Changes</string>
    <string name="currentServices">Current services for this clinic</string>
    <string name="deleteServicesInstruction"><u>Long</u> click on a service to remove it from your clinic</string>
    <string name="servicesAvailableTitle">Available Services</string>
    <string name="servicesAvailableInstruction">Click on a service to add it to your clinic</string>
    <string name="registerServiceToClinicQuestion">Would like to register this service to your clinic?</string>
    <string name="removeServiceFromClinicQuestion">Would you like to remove this service from your clinic?</string>
    <string name="removeBTN">Remove</string>
    <string name="registerBTN">Register</string>
    <string name="workingHoursTitle">Clinic Working Hours</string>
    <string name="mondayText">Mon:</string>
    <string name="tuesdayText">Tue:</string>
    <string name="wednesdayText">Wed:</string>
    <string name="thursdayText">Thu:</string>
    <string name="fridayText">Fri:</string>
    <string name="saturdayText">Sat:</string>
    <string name="sundayText">Sun:</string>
    <string name="start">Start</string>
    <string name="to">To</string>
    <string name="end">End</string>
    <string name="workingHoursInstruction">View and set your working hours here</string>
    <string name="startMondayHint">08:30</string>
    <string name="endMondayHint">16:45</string>
    <string name="templateTimeHint">00:00</string>
    <string name="mainClinicQuestion">What would you like to do?</string>
    <string name="mainClinicServices">View/Add Services</string>
    <string name="mainClinicProfileInfo">Update Profile Information</string>
    <string name="mainClinicWorkingHours">View/Edit Working Hours</string>
    <string name="mainClinicAddressHint">Address Hint</string>
    <string name="mainClinicPhoneHint">Phone Number Hint</string>
    <string name="mainClinicEmployeeName">Employee Name Hint</string>
    <string name="owner">Owner:</string>
    <string name="address">Address:</string>
    <string name="phoneNumber">Phone number:</string>
    <string name="cityTextView">City name:</string>
    <string name="cityClinic">City hint</string>
    <string name="clinicRatings">Clinic Ratings</string>
    <string name="rateAClinic">Rate a clinic</string>
    <string name="clinicRatingTextView">Input a rating number (1 to 5)</string>
    <string name="clinicRatingsInstruction">Long click on clinic to give it a rating</string>
    <string name="cancelBTN">Cancel</string>
    <string name="messageHint">Write a message</string>
    <string name="searchableServicesTitle">Current Services</string>
    <string name="searchableServicesInstruction">Long click on a service to see clinics that implement it</string>
    <string name="clinicsImplementingXInstruction">Click on a clinic to book an appointment</string>
    <string name="clinicsImplementingService">Clinics Implementing this Service</string>
    <string name="clinicsImplementingTime">Clinics Open During this Time</string>
    <string name="clinicsImplementingAddress">Clinics Sharing this Address/Name</string>
    <string name="patientNameHint">Patient Name</string>
    <string name="searchByTime">Search by Time and Day</string>
    <string name="searchByAddress">Search by Address or Clinic Name</string>
    <string name="viewRatingsBTN">View Ratings</string>
    <string name="searchClinicBTN">Search &amp; Book</string>
    <string name="searchForAClinic">Search for a Clinic</string>
    <string name="searchClinicAddressAndName">Address or Clinic Name</string>
    <string name="bookAppointment">Book Appointment</string>
    <string name="day">Day: </string>
    <string name="date">Date: </string>
    <string name="dateHint">2020/11/30</string>
    <string name="appointmentInstructionTwo">Book an appointment by specifying a date</string>
    <string name="appointmentInstruction">Here are the current working hours for this clinic</string>
    <string name="waitTime">Estimated Wait Time: </string>
    <string name="confirmAppointmentQuestion">Please confirm your appointment request</string>
    <string name="viewBookings">View Bookings</string>
    <string name="bookingDateHint">year/month/day</string>
    <string name="bookingsTitle">Current Bookings</string>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

</resources>
