<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    android:layout_margin="@dimen/layoutMargin">

    <LinearLayout
        android:id="@+id/TitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rateClinicTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rateAClinic"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white" />
    </LinearLayout>

    <EditText
        android:id="@+id/clinicRatingInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/clinicRatingTextView"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/clinicMessageInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/messageHint"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <Button
            android:id="@+id/cancelRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/cancelBTN" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <Button
            android:id="@+id/confirmRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/saveChanges" />


        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>