<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:background="@color/green"
    android:layout_margin="@dimen/layoutMargin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/cross"
            android:contentDescription="@string/cross"/>

        <LinearLayout
            android:id="@+id/TitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/clinicName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Clinic Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/LastSpaceLayout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/questionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mainClinicQuestion"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/SpaceLayout"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>




        <LinearLayout
            android:id="@+id/viewAndEditLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/servicesBTN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_bg_rounded_corners"
                android:text="@string/mainClinicServices"></Button>

            <LinearLayout
                android:id="@+id/SpaceLayoutThree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:id="@+id/workingHoursBTN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_bg_rounded_corners"
                android:text="@string/mainClinicWorkingHours" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/SpaceLayoutFour"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/DisplayNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ownerTextView"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/owner"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/displayName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/mainClinicEmployeeName"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/addressLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/address"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/addressClinic"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/mainClinicAddressHint"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cityTextView"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/cityTextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/cityClinic"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/cityClinic"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/phoneNumber"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/phoneClinic"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/mainClinicPhoneHint"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>



    </LinearLayout>

</RelativeLayout>