<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationPatientActivity"
    android:background="@color/green"
    android:layout_margin="@dimen/layoutMargin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/WhoAreYouLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/registerPatient"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/FirstNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/firstNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/firstnameLBL"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LastNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:gravity="center"
            android:textColor="@color/white">


            <EditText
                android:id="@+id/lastNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/lastnameLBL"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/EmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/emailLBL"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/PasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/passwordLBL"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/createAccount"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg_rounded_corners"
                android:text="@string/createAccount"></Button>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/OutputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/errorOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textColor="@color/white"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>