<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:layout_margin="@dimen/layoutMargin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ImageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/cross" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/EmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/emailLBL"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/PasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passwordtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/passwordLBL"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LoginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginBTN"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg_rounded_corners"
                android:text="@string/loginBTN"></Button>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/NoAccountLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/registerTextView"

                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/RegisterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registerPatientBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_text_only"
                android:text="@string/registerPatientBTN"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/registerEmployeeBTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_text_only"
                android:onClick="openRegistrationClinic"
                android:text="@string/registerEmployeeBTN"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/OutputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/errorOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>